<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_menu_info"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_menu_feedback"
        android:title="@string/feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_menu_find"
        android:icon="@drawable/outline_find_in_page_24"
        android:title="@string/find"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/main_menu_conj"
        android:title="@string/conjugate"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/main_menu_defn"
        android:title="@string/definition"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>
