<resources>
    <string name="app_name">Anglo-Saxon</string>
    <string name="long_app_name">Bosworth–Toller Anglo-Saxon</string>
    <string name="about_page_title">Bosworth–Toller/Charles</string>
    <string name="feedback_email">anglosaxon@mdln.net</string>
    <string name="feedback_subject">Feedback on %s</string>
    <string name="type_feedback_here">TYPE FEEDBACK HERE</string>
    <string name="main_help_text">Type \'th\' for \'þ\' or \'ð\', and \'ae\' for \'æ\'. You can search for Anglo-Saxon and Modern English words.</string>
    <string name="recent_label_text">recent:</string>
    <string name="search_results_label">search results</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="find">Find</string>
    <string name="conjugate">Conj.</string>
    <string name="definition">Defn.</string>
    <string name="unpack_dict_message">Could not expand compressed dictionary database. This app requires around 100MB free to run.</string>
    <string name="unpack_dict_title">Error initializing dictionary</string>
    <string name="unpack_dict_exit">Exit</string>
    <string name="conj_suffix">(conj.)</string>
</resources>
